--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-base-page/head-libs.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/eaton-base-page/head-libs.html
@@ -1,6 +1,6 @@
 <!--/*
     Copyright 2015 Adobe Systems Incorporated
-  
+
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
@@ -25,8 +25,8 @@
 <sly data-sly-include="customheaderlibs.html" />
 
 <!--/* Initialize TypeKit Fonts */-->
-<script src="https://use.typekit.net/dje4ayd.js"></script>
-<script>try{Typekit.load({async:true});}catch(e){}</script>
+<!--/* <script src="https://use.typekit.net/dje4ayd.js"></script> */-->
+<!--/* <script>try{Typekit.load({async:true});}catch(e){}</script> */-->
 
 <!--/* Initialize the Authoring UI */-->
 <sly data-sly-include="author.html" />
