--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
@@ -4,15 +4,15 @@
 
 <div class="eaton-tabbed-menu-list" data-sly-use.data="../data/tabbed-menu-list-data.js">
 	<div class="container">
-		<div id="accordion" class="panel-group eaton-tabbed-menu-list__accordion" data-sly-list.tab=${data.tabs}>
-			<div class="eaton-tabbed-menu-list__item col-md-4">
-				<a class="eaton-tabbed-menu-list__title mobile collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse${tabList.index}" data-index="${tabList.index}">
-					${tab.title} <span class="icon icon-sign-plus pull-right"></span>
+		<div id="accordion" class="panel-group eaton-tabbed-menu-list__accordion mobile" data-sly-list.tab=${data.tabs} role="presentation">
+			<div class="eaton-tabbed-menu-list__item b-body-copy col-md-4" role="heading">
+				<a class="eaton-tabbed-menu-list__title mobile collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse${tabList.index}" data-index="${tabList.index}" aria-expanded="false">
+					${tab.title} <span class="icon icon-sign-plus pull-right" aria-hidden="true"></span>
 				</a>
-				<a class="eaton-tabbed-menu-list__title desktop" data-toggle="tab" href="#tab${tabList.index}" data-index="${tabList.index}">
+				<!-- <a class="eaton-tabbed-menu-list__title desktop" data-toggle="tab" href="#tab${tabList.index}" data-index="${tabList.index}">
 					${tab.title}	
-				</a>
-				<div id="collapse${tabList.index}" class="panel-collapse collapse">
+				</a> -->
+				<div id="collapse${tabList.index}" class="panel-collapse collapse" role="region" aria-labelledby="${tab.title}">
 					<div class="row">
 						<div class="col-xs-12">
 							<a class="b-body-copy" href="${tab.content.header.url}" title="${tab.content.header.text}">${tab.content.header.text}</a>
@@ -26,17 +26,31 @@
 				</div>
 			</div>
 		</div>
-		<div class="tab-content" data-sly-list.tab=${data.tabs}>
-			<div id="tab${tabList.index}" class="tab-pane fade eaton-tabbed-menu-list__item">
+		<div class="eaton-tabbed-menu-list__tabs desktop" data-sly-list.tab=${data.tabs}>
+			<div class="eaton-tabbed-menu-list__item b-body-copy col-md-4" role="tablist">
+				<a class="eaton-tabbed-menu-list__title desktop" data-toggle="tab" href="#tab${tabList.index}" data-index="${tabList.index}" role="tab" aria-selected="false">
+					${tab.title}	
+				</a>
+			</div>
+		</div>
+		
+	</div>
+	<div class="tab-content desktop" data-sly-list.tab=${data.tabs}>
+		<div id="tab${tabList.index}" class="tab-pane fade eaton-tabbed-menu-list__item">
+			<div class="container">
 				<div class="row">
-					<div class="col-xs-12">
+					<div class="col-xs-12 col-md-3 eaton-tabbed-menu-list__tab-title">
 						<a class="b-body-copy" href="${tab.content.header.url}" title="${tab.content.header.text}">${tab.content.header.text}</a>
 					</div>
-					<sly data-sly-list.link="${tab.content.links}">
-						<div class="col-xs-12">
-							<a class="b-body-copy-small" href="${link.url}" title="${link.text}">${link.text}</a>
+					<div class="col-xs-12 col-md-9 eaton-tabbed-menu-list__tab-links">
+						<div class="row">
+							<sly data-sly-list.link="${tab.content.links}"> 
+								<div class="col-xs-12 col-md-4">
+									<a class="b-body-copy-small" href="${link.url}" title="${link.text}">${link.text}</a>
+								</div>
+							</sly>
 						</div>
-					</sly>
+					</div>
 				</div>
 			</div>
 		</div>
