Mega Menu - Debug Components not showing up in Touch UI + use global functions to check AEM author-modes

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -1,7 +1,9 @@
 <sly data-sly-use.header="data/header-data.js">
     <div class="eaton-header">
         <!--/* Include: Full Page Drawer */*/-->
-        <sly data-sly-resource="${'full-page-drawer' @ resourceType='eaton/static-components/structure/full-page-drawer'}"></sly>
+        <div data-sly-unwrap="${!wcmmode.edit}">
+          <sly data-sly-resource="${'full-page-drawer' @ resourceType='eaton/static-components/structure/full-page-drawer'}"></sly>
+        </div>
 
         <!--/* Utility Navigation */-->
         <div class="header-utility-nav">
@@ -58,6 +60,8 @@
         </div>
 
         <!--/* Include: Mega Menu */-->
-        <sly data-sly-resource="${'mega-menu' @ resourceType='eaton/static-components/structure/mega-menu'}"></sly>
+        <div data-sly-unwrap="${!wcmmode.edit}">
+          <sly data-sly-resource="${'mega-menu' @ resourceType='eaton/static-components/structure/mega-menu'}"></sly>
+        </div>
     </div>
 </sly>
