enable the link and tabs behavior

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-family/static_product-tabs-family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-family/static_product-tabs-family.html
@@ -5,13 +5,12 @@
 <sly data-sly-test="!${wcmmode.edit}" data-sly-use.viewData="data/product-tabs-family-data.js" >
 
   <sly data-sly-test="${ properties.view == 'toggle-graphic' }">
-    <!-- <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
+    <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
       <sly data-sly-call="${ tpl.data @ data=viewData.toggleGraphic }"></sly>
-    </sly> -->
+    </sly>
   </sly>
 
-  <!-- <sly data-sly-test="${ properties.view == 'links-navigation' }"> -->
-  <sly data-sly-test="${ properties.view == 'toggle-graphic' }">
+  <sly data-sly-test="${ properties.view == 'links-navigation' }">
     <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
       <sly data-sly-call="${ tpl.data @ data=viewData.linkNavigation }"></sly>
     </sly>
