Fix Lint Issues

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
@@ -1,3 +1,4 @@
+<!--/* Component M-46: Category Menu | Tabbed Menu List */-->
 <sly data-sly-test="${ wcmmode.edit }">
   <div class="alert alert-warning">Tabbed Menu List Component</div>
 </sly>
