Remove Extra wrapper div - product tabs

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-family/product-tabs-family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-family/product-tabs-family.html
@@ -1,4 +1,4 @@
 
 <!-- Integrated code goes here -->
 
-<div data-sly-include="static_product-tabs-family.html"></div>
+<sly data-sly-include="static_product-tabs-family.html"></sly>
