[Styleguide] Update examples text-elements

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/styleguide.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/styleguide.html
@@ -55,13 +55,18 @@
 
 
     <style>
+
+      .eaton-styleguide {
+        padding-top: 30px;
+      }
+
       .sg-section {
-        padding: 0 0 6rem;
+        padding: 0 0 5rem;
       }
 
       .sg-divider {
         border: 3px solid #CCD2D7;
-        margin: 2rem 0 6rem;
+        margin: 2rem 0 5rem;
         width: 100%;
       }
 
@@ -113,7 +118,7 @@
       }
 
     	.sg-section td {
-    		/* Behave  like a "row" */
+    		/* Behave like a "row" */
     		border: 0;
     		position: relative;
         padding: 0.5rem 2rem;
