Aligning the search-box contents to the edge of the container

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -61,7 +61,7 @@
 
         <!--/* Include: Primary Nav Search */-->
         <div data-sly-unwrap="${!wcmmode.edit}">
-          <div class="header-search">
+          <div class="header-search dark-theme">
             <sly data-sly-resource="${'primary-nav-search' @ resourceType='eaton/static-components/content/search-box'}"></sly>
           </div>
         </div>
