Update Link Logo component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/logo/static_logo.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/logo/static_logo.html
@@ -5,7 +5,10 @@
 
 <sly data-sly-use.data="${'data/logo-data.js' @testdata=properties.testdata}">
   <div class="eaton-logo">
-    <a href="/" class="eaton-logo__link">
+    <a href="${ data.link.url }"
+      target="${ data.link.target }"
+      class="eaton-logo__link"
+    >
       <img class="eaton-logo__image img-responsive" src="${ data.imageSrc }" alt="${ data.imageAlt }" />
     </a>
   </div>
