--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/styleguide.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/styleguide.html
@@ -1,7 +1,7 @@
 <!--/*
 
-  EATON Styleguide
-  Component used to showcase different UI Elements
+EATON Styleguide
+Component used to showcase different UI Elements
 
 */-->
 
@@ -21,10 +21,11 @@
           <li><a href="#sg-fonts">Fonts</a></li>
           <li><a href="#sg-typography">Typography</a></li>
           <li><a href="#sg-buttons">Buttons</a></li>
+          <li><a href="#sg-scss-helpers">SCSS Helpers</a></li>
           <li><a href="#sg-glyphicon-font">Glyphicon-Font</a></li>
         </ol>
+        <hr class="sg-divider" />
       </div>
-      <hr class="sg-divider" />
 
       <!--/* Section: Colors */-->
       <sly data-sly-use.tpl="partials/styleguide-colors.html">
@@ -46,6 +47,11 @@
         <sly data-sly-call="${ tpl.section @ data=data.buttons }"></sly>
       </sly>
 
+      <!--/* Section: SCSS Helpers */-->
+      <sly data-sly-use.tpl="partials/styleguide-scss-helpers.html">
+        <sly data-sly-call="${ tpl.section @ data=data.buttons }"></sly>
+      </sly>
+
       <!--/* Section: Glyphicon-Font */-->
       <sly data-sly-use.tpl="partials/styleguide-glyphicon-font.html">
         <sly data-sly-call="${ tpl.section @ data=data.glyphiconFont }"></sly>
@@ -56,90 +62,89 @@
 
     <style>
 
-      .eaton-styleguide {
-        padding-top: 30px;
+    .eaton-styleguide {
+      padding-top: 30px;
+    }
+
+    .sg-section {
+      padding: 8rem 0 2rem;
+    }
+
+    .sg-divider {
+      border: 3px solid #CCD2D7;
+      margin: 2rem 0 0;
+      width: 100%;
+    }
+
+    .sg-section table {
+      margin: 0 auto;
+      width: 100%;
+    }
+
+    .sg-section thead td {
+      font-weight: bold;
+      background-color: #EEF0F2;
+    }
+
+    .sg-section tr {
+      border-top: 1px solid #DDD;
+    }
+
+    .sg-section td {
+      padding: 1rem;
+    }
+
+    .sg-caption {
+      color: #98A4AE;
+      font-size: 14px;
+      line-height: 1.4;
+    }
+
+
+    /*------------------------------------*
+    * Styleguide (SG) Responsive Tables
+    *-------------------------------------*/
+    @media only screen and (max-width: 991px) {
+
+      /* Force table to not be like tables anymore */
+      table, thead, tbody, th, td, tr {
+        display: block;
       }
 
-      .sg-section {
-        padding: 0 0 5rem;
-      }
-
-      .sg-divider {
-        border: 3px solid #CCD2D7;
-        margin: 2rem 0 5rem;
-        width: 100%;
-      }
-
-      .sg-section table {
-        margin: 0 auto;
-        width: 100%;
-      }
-
-      .sg-section thead td {
-        font-weight: bold;
-        background-color: #EEF0F2;
+      /*b Hide table headers (but not display: none;, for accessibility) */
+      .sg-section thead tr {
+        position: absolute;
+        top: -9999px;
+        left: -9999px;
       }
 
       .sg-section tr {
-        border-top: 1px solid #DDD;
-      }
-
-      .sg-section td {
-        padding: 1rem;
-      }
-
-      .sg-caption {
-        color: #98A4AE;
-        font-size: 14px;
-        line-height: 1.4;
-      }
-
-
-      /*------------------------------------*
-      * Styleguide (SG) Responsive Tables
-      *-------------------------------------*/
-      @media only screen and (max-width: 991px) {
-
-    	/* Force table to not be like tables anymore */
-    	table, thead, tbody, th, td, tr {
-    		display: block;
-    	}
-
-    	/* Hide table headers (but not display: none;, for accessibility) */
-    	.sg-section thead tr {
-    		position: absolute;
-    		top: -9999px;
-    		left: -9999px;
-    	}
-
-    	.sg-section tr {
         border: 1px solid #DDD;
         padding: 3rem 0;
       }
 
-    	.sg-section td {
-    		/* Behave like a "row" */
-    		border: 0;
-    		position: relative;
+      .sg-section td {
+        /* Behave like a "row" */
+        border: 0;
+        position: relative;
         padding: 0.5rem 2rem;
         word-wrap: break-word;
-    	}
+      }
 
-    	.sg-section td:before {
-    		/* Now like a table header */
-    		position: absolute;
-    		/* Top/left values mimic padding */
-    		top: 6px;
-    		left: 6px;
-    		width: 45%;
-    		padding-right: 10px;
-    		white-space: nowrap;
-    	}
+      .sg-section td:before {
+        /* Now like a table header */
+        position: absolute;
+        /* Top/left values mimic padding */
+        top: 6px;
+        left: 6px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+      }
 
+    }
 
     </style>
 
   </div>
-
-
 </sly>
