Fix Components Authoring for QA-Template pages, Mainly “featured-topic” component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/featured-topic/static_featured-topic.html
@@ -9,7 +9,7 @@
       <div class="col-sm-12">
         <div class="eaton-featured-topic__title">
           <!--/* Component: Title */-->
-          <sly data-sly-resource="${'featured-topic-title' @ resourceType='/apps/eaton/static-components/general/title'}"></sly>
+          <sly data-sly-resource="${'title' @ resourceType='/apps/eaton/static-components/general/title'}"></sly>
         </div>
       </div>
     </div>
