Manage state of Button - When search is open - Desktop

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/structure/header/static_header.html
@@ -48,6 +48,7 @@
                         <button class="button--reset header-primary-nav__open-search">
                           <span class="sr-only">Search</span>
                           <i class="icon icon-search" aria-hidden="true"></i>
+                          <i class="icon icon-close" aria-hidden="true"></i>
                         </button>
                         <button class="button--reset header-primary-nav__toggle-mobile-menu">
                           <span class="sr-only">Toggle Mobile Menu</span>
