--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/tabbed-menu-list/static_tabbed-menu-list.html
@@ -7,10 +7,11 @@
 	<div class="container">
 		<div id="accordion" class="panel-group eaton-tabbed-menu-list__accordion mobile" data-sly-list.tab=${data.tabs} role="presentation">
 			<div class="eaton-tabbed-menu-list__item b-body-copy col-md-4" role="heading">
-				<a class="eaton-tabbed-menu-list__title mobile collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse${tabList.index}" data-index="${tabList.index}" aria-expanded="false">
+				<a class="eaton-tabbed-menu-list__title mobile collapsed" href="${tab.titlelink}" data-sly-test=${tab.titlelink} title="${tab.title}" target="${tab.titletarget}">${tab.title}</a>
+				<a class="eaton-tabbed-menu-list__title mobile collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse${tabList.index}" data-index="${tabList.index}" aria-expanded="false" data-sly-test=${!tab.titlelink}>
 					${tab.title} <span class="icon icon-sign-plus pull-right" aria-hidden="true"></span>
 				</a>
-				<div id="collapse${tabList.index}" class="panel-collapse collapse" role="region" aria-labelledby="${tab.title}">
+				<div id="collapse${tabList.index}" class="panel-collapse collapse" role="region" aria-labelledby="${tab.title}" data-sly-test=${!tab.titlelink}>
 					<div class="row">
 						<div class="col-xs-12">
 							<a class="b-body-copy" href="${tab.headerlink}" title="${tab.headertext}" target="${tab.headertarget}">${tab.headertext}</a>
@@ -29,13 +30,14 @@
 	<div class="container tab-container">
 		<sly data-sly-list.tab=${data.tabs}>
 					<div class="eaton-tabbed-menu-list__item b-body-copy col-md-4 desktop ${tabList.index >= 0 && tabList.index <= 2 ? 'primary' : ''} ${tabList.index >= 3 && tabList.index <= 5 ? 'secondary' : ''} ${tabList.index >= 6 && tabList.index <= 8 ? 'tertiary' : ''} ${tabList.index >= 9 && tabList.index <= 11 ? 'quaternary' : ''} ${tabList.index >= 12 && tabList.index <= 14 ? 'quinary' : ''}" >
-						<a class="eaton-tabbed-menu-list__title desktop" data-toggle="tab" href="#tab${tabList.index}" data-index="${tabList.index}" role="tab" aria-selected="false">
+						<a class="eaton-tabbed-menu-list__title desktop link" href="${tab.titlelink}" title="${tab.title}" data-sly-test=${tab.titlelink} target=${tab.titletarget}>${tab.title}</a>
+						<a class="eaton-tabbed-menu-list__title desktop" data-toggle="tab" href="#tab${tabList.index}" data-index="${tabList.index}" role="tab" aria-selected="false" data-sly-test=${!tab.titlelink}>
 							${tab.title}
 						</a>
 					</div>
 			</sly>
 		<sly data-sly-list.tab=${data.tabs}>
-		<div class="tab-content desktop ${tabList.index >= 0 && tabList.index <= 2 ? 'primary' : ''} ${tabList.index >= 3 && tabList.index <= 5 ? 'secondary' : ''} ${tabList.index >= 6 && tabList.index <= 8 ? 'tertiary' : ''} ${tabList.index >= 9 && tabList.index <= 11 ? 'quaternary' : ''} ${tabList.index >= 12 && tabList.index <= 14 ? 'quinary' : ''} eaton-tabbed-menu-list__tab desktop col-md-12" >
+		<div class="tab-content desktop ${tabList.index >= 0 && tabList.index <= 2 ? 'primary' : ''} ${tabList.index >= 3 && tabList.index <= 5 ? 'secondary' : ''} ${tabList.index >= 6 && tabList.index <= 8 ? 'tertiary' : ''} ${tabList.index >= 9 && tabList.index <= 11 ? 'quaternary' : ''} ${tabList.index >= 12 && tabList.index <= 14 ? 'quinary' : ''} eaton-tabbed-menu-list__tab desktop col-md-12" data-sly-test=${!tab.titlelink}>
 			<div id="tab${tabList.index}" class="tab-pane fade eaton-tabbed-menu-list__item" >
 				<div class="container">
 					<div class="row">
