--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-sku/static_product-tabs-sku.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-sku/static_product-tabs-sku.html
@@ -2,17 +2,17 @@
   <div class="alert alert-warning">Product tabs SKU</div>
 </sly>
 
-<sly data-sly-test="!${wcmmode.edit}" data-sly-use.viewData="data/product-tabs-sku-data.js" >
-
-  <sly data-sly-test="${ properties.view == 'toggle-graphic' }">
-    <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
-      <sly data-sly-call="${ tpl.data @ data=viewData.toggleGraphic }"></sly>
-    </sly>
-  </sly>
+<sly data-sly-use.viewData="${'data/product-tabs-sku-data.js' @testdata=properties.testdata}">
 
   <sly data-sly-test="${ properties.view == 'links-navigation' }">
     <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
-      <sly data-sly-call="${ tpl.data @ data=viewData.linkNavigation }"></sly>
+      <sly data-sly-call="${ tpl.data @ data=viewData.default }"></sly>
+    </sly>
+  </sly>
+
+  <sly data-sly-test="${ properties.view == 'toggle-graphic' }">
+    <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
+      <sly data-sly-call="${ tpl.data @ data=viewData.graphicToggle }"></sly>
     </sly>
   </sly>
 
