--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-family/static_product-tabs-family.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-tabs-family/static_product-tabs-family.html
@@ -6,13 +6,13 @@
 
   <sly data-sly-test="${ properties.view == 'links-navigation' }">
     <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
-      <sly data-sly-call="${ tpl.data @ data=viewData.default }"></sly>
+      <sly data-sly-call="${ tpl.data @ data=viewData }"></sly>
     </sly>
   </sly>
 
   <sly data-sly-test="${ properties.view == 'toggle-graphic' }">
     <sly data-sly-use.tpl="../../shared/templates/module-product-tab.html">
-      <sly data-sly-call="${ tpl.data @ data=viewData.graphicToggle }"></sly>
+      <sly data-sly-call="${ tpl.data @ data=viewData }"></sly>
     </sly>
   </sly>
 
