ProductGrid - Fix path to data.js after renaming the component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/static_product-grid.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/static_product-grid.html
@@ -1,4 +1,4 @@
-<sly data-sly-use.data="${ '../data/product-grid-sku-data.js' @testdata=properties.testdata }">
+<sly data-sly-use.data="${ '../data/product-grid-data.js' @testdata=properties.testdata }">
 
   <div class="product-grid-results">
     <div class="container">
