--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/title-text-image-link/static_title-text-image-link.html
@@ -25,3 +25,7 @@
 <sly data-sly-test="${properties.view == 'article-feature'}">
     <sly data-sly-include="views/view-article-feature.html" data-sly-unwrap></sly>
 </sly>
+
+<sly data-sly-test="${properties.view == 'topic-link-white'}">
+    <sly data-sly-include="views/view-topic-link-white.html" data-sly-unwrap></sly>
+</sly>
