[EATON-119] Temporary Fix Issue where the component can be loaded in AEM - DataModel is currently empty

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
@@ -20,9 +20,9 @@
 
 
     <!--/* M-41: Related Products */-->
-    <sly data-sly-use.tpl="../../shared/templates/module-related-products.html">
-      <sly data-sly-call="${ tpl.module @ data=data.relatedProducts }"></sly>
-    </sly>
+    sly data-sly-use.tpl="../../shared/templates/module-related-products.html">
+      sly data-sly-call="${ tpl.module @ data=data.relatedProducts }"></sly>
+    /sly>
 
   </div>
 
