Add Data for Primary Nav Links - Include as `resource` in header instead of `template` (Move data to component instead of container)

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/static_link-list.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/link-list/static_link-list.html
@@ -38,3 +38,7 @@
 <sly data-sly-test="${properties.view == '2column'}">
     <sly data-sly-include="views/view-2column.html" data-sly-unwrap></sly>
 </sly>
+
+<sly data-sly-test="${properties.view == 'primary-nav'}">
+    <sly data-sly-include="views/view-primary-nav.html" data-sly-unwrap></sly>
+</sly>
