--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/static_search-box.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/search-box/static_search-box.html
@@ -6,10 +6,6 @@
   <sly data-sly-include="views/view-inline.html" data-sly-unwrap></sly>
 </sly>
 
-<sly data-sly-test="${ properties.view == 'primary-nav' }">
-  <sly data-sly-include="views/view-primary-nav.html" data-sly-unwrap></sly>
-</sly>
-
-<sly data-sly-test="${ properties.view == 'search-box' }">
-  <sly data-sly-include="views/view-secondary-search-box.html" data-sly-unwrap></sly>
+<sly data-sly-test="${ properties.view == 'default' }">
+  <sly data-sly-include="views/view-default.html" data-sly-unwrap></sly>
 </sly>
