Added comments on what's missing

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-family-card/static_product-family-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-family-card/static_product-family-card.html
@@ -35,5 +35,9 @@
       </div>
     </div>
   </div>
+  
+  <!--  Include the Icon List component here (Highlights View) -->
+  
+  <!--  Add markup here to support the Core Features/Benefits content -->
 
 </sly>
