--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/category-highlight/static_category-highlight.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/category-highlight/static_category-highlight.html
@@ -1,9 +1,15 @@
 <sly data-sly-test="${ wcmmode.edit }">
-    <div class="alert alert-info">Category Highlight Component</div>
+  <div class="alert alert-info">Category Highlight Component</div>
 </sly>
 
-<sly data-sly-resource="${'title-text-image-link' @ resourceType='eaton/static-components/content/title-text-image-link'}"></sly>
+<div class="eaton-category-highlight">
 
-<div class="category-highlight-list-container">
+  <div class="eaton-category-highlight__top">
+    <sly data-sly-resource="${'ttil' @ resourceType='eaton/static-components/content/title-text-image-link'}"></sly>
+  </div>
+
+  <div class="eaton-category-highlight__bottom">
     <sly data-sly-resource="${'list' @ resourceType='eaton/static-components/content/list'}"></sly>
+  </div>
+
 </div>
