--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-family-card/static_product-family-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-family-card/static_product-family-card.html
@@ -35,9 +35,10 @@
       </div>
     </div>
   </div>
-  
-  <!--  Include the Icon List component here (Highlights View) -->
-  
-  <!--  Add markup here to support the Core Features/Benefits content -->
 
+  <!--  Include the Icon List component here (Highlights View) -->
+  <sly data-sly-resource="${'icon-list' @ resourceType='/apps/eaton/static-components/content/icon-list'}"></sly>
+  <!--  Add markup here to support the Core Features/Benefits content -->
+  <sly data-sly-resource="${'product-benefits' @ resourceType='/apps/eaton/static-components/product/product-features'}"></sly>
+  <sly data-sly-resource="${'product-features' @ resourceType='/apps/eaton/static-components/product/product-features'}"></sly>
 </sly>
