--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
@@ -3,7 +3,7 @@
 </sly>
 
 
-<sly data-sly-use.viewData="${ '../data/product-detail-card-data.js' @testdata=properties.testdata }">
+<sly data-sly-use.data="${ '../data/product-detail-card-data.js'}">
 
   <div class="eaton-product-detail-card">
 
@@ -17,12 +17,6 @@
     <sly data-sly-use.tpl="../../shared/templates/module-media-gallery.html">
       <sly data-sly-call="${ tpl.module @ data=data.mediaGallery }"></sly>
     </sly>
-
-
-    <!--/* M-41: Related Products */-->
-    sly data-sly-use.tpl="../../shared/templates/module-related-products.html">
-      sly data-sly-call="${ tpl.module @ data=data.relatedProducts }"></sly>
-    /sly>
 
   </div>
 
