EATON-364 - fixing font issues with topic link list

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/how-to-buy/static_how-to-buy.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/how-to-buy/static_how-to-buy.html
@@ -9,7 +9,7 @@
         <div class="col-xs-12 col-md-4 eaton-how-to-buy__element" >
           <div class="b-heading-h3">${data.headline}</div>
         </div>
-      
+
         <div class="col-xs-12 col-md-8">
         <div class="row" >
     </sly>
@@ -23,7 +23,7 @@
           <img src="${link.image}">
         </div>
         <div class="eaton-how-to-buy__text-wrapper">
-          <a href="${link.linkl}" class="${data.headline ? 'b-heading-h4' : 'b-heading-h5'}" title="${link.title}" target="${link.target}">${link.title}</a>
+          <a href="${link.linkl}" class="${data.headline ? 'b-h4-link-bold' : 'b-h5-link-bold'}" title="${link.title}" target="${link.target}">${link.title}</a>
           <div class="p-body-copy">${link.text}</div>
         </div>
       </div>
