--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
@@ -18,6 +18,12 @@
       <sly data-sly-call="${ tpl.module @ data=data.mediaGallery }"></sly>
     </sly>
 
+
+    <!--/* M-41: Related Products */-->
+    <sly data-sly-use.tpl="../../shared/templates/module-related-products.html">
+      <sly data-sly-call="${ tpl.module @ data=data.relatedProducts }"></sly>
+    </sly>
+
   </div>
 
 </sly>
