--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/static_product-grid.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/static_product-grid.html
@@ -5,7 +5,12 @@
 
 <sly data-sly-use.data="${ '../data/product-grid-data.js' @testdata=properties.testdata }">
 
-  <div class="product-grid-results">
+  <!--/* It Adds a custom class to the grid container based on the Type of results */-->
+  <div class="product-grid-results ${
+    properties.view == 'product-card-sku'
+      ? 'product-grid-results--sku'
+      : 'product-grid-results--family'
+    }">
     <div class="container">
 
       <!--/* Results Header */-->
@@ -27,7 +32,7 @@
           </sly>
         </div>
 
-        <!--/* M-60: Results List */-->
+        <!--/* Results List */-->
         <div class="col-xs-12 col-md-9">
 
           <!--/* View: Card-SKU */-->
