--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
@@ -15,7 +15,8 @@
 
     <!--/* M-48: Media Gallery */-->
     <sly data-sly-use.tpl="../../shared/templates/module-media-gallery.html">
-      <sly data-sly-call="${ tpl.module @ data=viewData.mediaGallery }"></sly>
+      <!-- <sly data-sly-call="${ tpl.module @ data=viewData.mediaGallery }"></sly> -->
+      <div class="container text-center" style="padding: 160px 0">M-48: Media Gallery</div>
     </sly>
 
 
