--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-detail-card/static_product-detail-card.html
@@ -17,9 +17,10 @@
     <sly data-sly-use.tpl="../../shared/templates/module-media-gallery.html">
       <sly data-sly-call="${ tpl.module @ data=viewData.mediaGallery }"></sly>
     </sly>
-    
+
 
     <!--/* M-41: Related Products */-->
+    <!--/* NOTE: It should behave as an Upsell Component: Carousel starts after 3 items */-->
     <div class="eaton-product-detail-card__related-products">
       <div class="container">
         <sly data-sly-use.tpl="../../shared/templates/module-related-products.html">
