Cleanup CTA Component

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/cta/static_cta.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/cta/static_cta.html
@@ -10,7 +10,7 @@
 
 
 <sly data-sly-test="${ wcmmode.edit }">
-  <div class="alert alert-warning">CTA Button Component</div>
+  <div class="alert alert-warning">CTA Component</div>
 </sly>
 
 
