--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/cta/cta.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/general/cta/cta.html
@@ -1,4 +1,4 @@
 
 <!-- Integrated code goes here -->
 
-<sly data-sly-include="static_ctabutton.html"></sly>
+<sly data-sly-include="static_cta.html"></sly>
